--- a/package.json
+++ b/package.json
@@ -7,8 +7,10 @@
     "test": "jest"
   },
   "dependencies": {
+    "pubnub-react": "^1.2.0",
     "react": "16.8.3",
-    "react-native": "0.59.9"
+    "react-native": "0.59.9",
+    "react-native-maps": "^0.24.2"
   },
   "devDependencies": {
     "@babel/core": "^7.4.5",
